# ci-RoboUmbra

./: .gitignore  LICENSE  README.md  bot.py  config.py.template  pyproject.toml  rumbra.pm2config.json
cogs/: help.py  trial.py  umbra.py
utils/: formats.py  paginator.py
